--- a/index.html
+++ b/index.html
@@ -13,5 +13,77 @@
         nim : 105841116322 <br>
         kelas : 4E
     </p>
+<hr>
+    <h1>SELAMAT DATANG DI SHOPEE</h1>
+    <img src="https://simak.unismuh.ac.id/upload/mahasiswa/105841116322_.jpg?1716877517" alt="ftoku"width="150" height="200">
+    <p>
+        nama: Galbi Nadifah <br>
+        nim : 105841116322 <br>
+        kelas : 4E
+    </p>
+<hr>
+    <h1>SELAMAT DATANG DI SHOPEE</h1>
+    <img src="https://simak.unismuh.ac.id/upload/mahasiswa/105841115522_.jpg?1716877517" alt="ftoku"width="150" height="200">
+    <p>
+        nama: sitti nurannisa <br>
+        nim : 105841115522 <br>
+        kelas : 4E
+    </p>
+<hr>
+    <h1>SELAMAT DATANG DI SHOPEE</h1>
+    <img src="https://simak.unismuh.ac.id/upload/mahasiswa/105841117322_.jpg?1716877517" alt="ftoku"width="150" height="200">
+    <p>
+        nama: andi amalia putri <br>
+        nim : 105841117322 <br>
+        kelas : 4E
+    </p>
+<hr>
+    <h1>SELAMAT DATANG DI SHOPEE</h1>
+    <img src="https://simak.unismuh.ac.id/upload/mahasiswa/105841115322_.jpg?1716877517" alt="ftoku"width="150" height="200">
+    <p>
+        nama:  muh raihan ramadhan<br>
+        nim : 105841117322 <br>
+        kelas : 4E
+    </p>
+<hr>
+<h1>SELAMAT DATANG DI SHOPEE</h1>
+<img src="https://simak.unismuh.ac.id/upload/mahasiswa/105841115422_.jpg?1716877517" alt="ftoku"width="150" height="200">
+<p>
+    nama:  nurhidayat<br>
+    nim : 105841115422 <br>
+    kelas : 4E
+</p>
+<hr>
+<h1>SELAMAT DATANG DI SHOPEE</h1>
+<img src="https://simak.unismuh.ac.id/upload/mahasiswa/105841116522_.jpg?1716877517" alt="ftoku"width="150" height="200">
+<p>
+    nama: abd rahman wahid<br>
+    nim : 105841116522 <br>
+    kelas : 4E
+</p>
+<hr>
+<h1>SELAMAT DATANG DI SHOPEE</h1>
+<img src="https://simak.unismuh.ac.id/upload/mahasiswa/105841116222_.jpg?1716877517" alt="ftoku"width="150" height="200">
+<p>
+    nama: vada<br>
+    nim : 105841116322 <br>
+    kelas : 4E
+</p>
+<hr>
+<h1>SELAMAT DATANG DI SHOPEE</h1>
+<img src="https://simak.unismuh.ac.id/upload/mahasiswa/105841116122_.jpg?1716877517" alt="ftoku"width="150" height="200">
+<p>
+    nama: audi<br>
+    nim : 105841116122 <br>
+    kelas : 4E
+</p>
+<hr>
+<h1>SELAMAT DATANG DI SHOPEE</h1>
+<img src="https://simak.unismuh.ac.id/upload/mahasiswa/105841116022_.jpg?1716877517" alt="ftoku"width="150" height="200">
+<p>
+    nama: teman<br>
+    nim : 105841116022 <br>
+    kelas : 4E
+</p>
 </body>
 </html>
